force-app/main/default/objects/CC_Agrupador_Reclamacion__c/CC_Agrupador_Reclamacion__c.object-meta.xml
<CustomObject>
    <label>Reclamación</label>
    <nameField>
        <displayFormat>REC-{0000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reclamaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>