force-app/main/default/objects/CC_Agrupador_Reclamacion__c/fields/CC_Contenido__c.field-meta.xml
<CustomField>
    <fullName>CC_Contenido__c</fullName>
    <description>Contenido de la reclamación a MAXIMO</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contenido</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>