force-app/main/default/objects/CC_Agrupador_Reclamacion__c/fields/CC_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>CC_Descripcion__c</fullName>
    <description>Descripción de la reclamación a MAXIMO</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Descripción</label>
    <length>150</length>
    <type>Text</type>
</CustomField>