force-app/main/default/objects/CC_Agrupador_Reclamacion__c/fields/CC_Enviado__c.field-meta.xml
<CustomField>
    <fullName>CC_Enviado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo check que nos indica si se ha enviado o no a MAXIMO, para tener un control cuando se ejecute el PB.</description>
    <label>Enviado</label>
    <type>Checkbox</type>
</CustomField>