force-app/main/default/objects/CC_Agrupador_Reclamacion__c/fields/CC_Fecha_Envio__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Envio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de envío</label>
    <type>DateTime</type>
</CustomField>