force-app/main/default/objects/CC_Agrupador_Reclamacion__c/fields/CC_Tipo_de_actividad__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo_de_actividad__c</fullName>
    <label>Tipo de actividad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reclamación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>